--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "new": "node ./scripts/generate.js"
   },
   "keywords": [
     "js",
