feat: 基于 vue-pure-admin 进行二次开发

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "preinstall": "npx only-allow pnpm"
   },
   "keywords": [
+    "vue-admin",
+    "vue3-admin",
     "pure-admin-thin",
     "vue-pure-admin",
     "element-plus",
